--- a/clientReact/src/App.css
+++ b/clientReact/src/App.css
@@ -17,8 +17,8 @@ h1 {
   background-color: #303537;
   border-radius: 8px;
   padding: 15px 20px;
-  margin-bottom: 10px;
-  font-size: small;
+  margin-bottom: 30px;
+  font-size:larger;
 }
 
 .main-content {
@@ -31,7 +31,7 @@ h1 {
 .panel {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .report {
@@ -42,5 +42,5 @@ h1 {
   border-radius: 5px;
   display: inline-block;
   font-family: monospace;
-  font-size: 18px;
+  font-size: 20px;
 }
