--- a/clientReact/src/components/Controls/Controls.css
+++ b/clientReact/src/components/Controls/Controls.css
@@ -7,9 +7,9 @@
 
 .sub-controls {
   display: inline-flex;
-  gap: 70px;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  justify-content: space-around;
 }
 
 .sub-controls button {
@@ -35,7 +35,7 @@
   color: #DDDDDE;
   min-width: 160px;
   padding: 8px 16px;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: normal;
   margin-top: 15px;
 }
