--- a/clientReact/src/components/Grid/Grid.css
+++ b/clientReact/src/components/Grid/Grid.css
@@ -1,9 +1,8 @@
 .grid {
   display: flex;
   flex-direction: column;
-  border: 3px solid #333;
   overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(103, 100, 100, 0.1);
 }
 
 .row {
@@ -11,15 +10,16 @@
 }
 
 .cell {
-  width: 100px;
-  height: 100px;
-  border: 1.5px solid #ccc;
+  width: 160px;
+  height: 160px;
+  border: 2.5px solid rgba(192, 192, 192, 0.271);
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   position: relative;
   overflow: hidden;
+  background-color: #262e2e;
 }
 
 .robot {
